@@ -292,10 +292,8 @@ site.exp: Makefile
 	@echo 'set srcdir $(srcdir)/testsuite' >> $@-t
 	@echo 'set objdir' `pwd` >> $@-t
 	@echo 'set newlib_cflags "$(NEWLIB_CFLAGS)"' >> $@-t
-	@echo 'set build_alias $(build_alias)' >> $@-t
-	@echo 'set build_triplet $(build_triplet)' >> $@-t
-	@echo 'set host_alias $(host_alias)' >> $@-t
-	@echo 'set host_triplet $(host_triplet)' >> $@-t
+	@echo 'set host_alias $(build_alias)' >> $@-t
+	@echo 'set host_triplet $(build_triplet)' >> $@-t
 	@echo 'set target_alias $(host_alias)' >> $@-t
 	@echo 'set target_triplet $(host_triplet)' >> $@-t
 	@echo '## All variables above are generated by configure. Do Not Edit ##' >> $@-t
